--- a/package.json
+++ b/package.json
@@ -14,6 +14,22 @@
   "license": "ISC",
   "devDependencies": {
     "gh-pages": "^6.3.0",
-    "vite": "^7.1.7"
+    "vite": "^7.1.7",
+    "@types/react": "19.2.0",
+    "@types/react-dom": "19.2.0",
+    "@types/node": "24.6.1",
+    "tailwindcss": "4.1.14",
+    "typescript": "5.9.3",
+    "postcss": "8.5.6"
+  },
+  "dependencies": {
+    "next": "15.5.4",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
+    "class-variance-authority": "0.7.1",
+    "clsx": "2.1.1",
+    "lucide-react": "0.544.0",
+    "tailwind-merge": "3.3.1",
+    "tailwindcss-animate": "1.0.7"
   }
 }
